fixed hero text overlap + started key features comp

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 .App-container {
     display: flex;
+    flex-direction: column;
     margin-left: 1.5rem;
     margin-right: 1.5rem;
 }
