--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,5 +1,5 @@
 .Hero {
-    width: 100vw;
+    width: 90vw;
     height: 30vh;
     display: block;
 }
